tests/sources/invalid/generics/generic_call_errors.fire
// Generic type-argument lists without a following constructor/call.
copyable class Box<T> {
    v: T;

    fn Box(v: T) {
        this.v = v;
    }
}

fn identity<T>(x: T) -> T {
    return x;
}

// Missing '(' after generic class type arguments
a: Box<int32> = Box<int32>;  //~ ERROR FS-PARSE-0010 @27
//~^ ERROR FS-PARSE-0003 @17

// Missing '(' after generic function type arguments
b: int32 = identity<int32>;  //~ ERROR FS-PARSE-0010 @27
//~^ ERROR FS-PARSE-0003 @12

// Non-type token inside a type argument list
c: Box<int32> = Box<5>(1);  //~ ERROR FS-PARSE-0010 @21
//~^ ERROR FS-PARSE-0010 @21
//~^^ ERROR FS-PARSE-0003 @17

// Missing '>' to close a generic function call's type-argument list
d: int32 = identity<int32(5);  //~ ERROR FS-PARSE-0010 @26
//~^ ERROR FS-PARSE-0010 @26
//~^^ ERROR FS-PARSE-0003 @12
